Refactor Core Domain & Ports (Issue #58)