@@ -11,7 +11,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -35,7 +34,7 @@ public class TestExecutionRepositoryAdapter implements TestExecutionRepository {
     public List<TestExecution> findByAthleteId(final String athleteId) {
         return mongoRepository.findByAthleteIdOrderByExecutionDateDesc(athleteId).stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -58,6 +57,6 @@ public class TestExecutionRepositoryAdapter implements TestExecutionRepository {
     public List<TestExecution> findTop5ByOrderByExecutionDateDesc() {
         return mongoRepository.findTop5ByOrderByExecutionDateDesc().stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
