@@ -10,7 +10,6 @@ import com.karateflow.backend.test.dto.response.TestResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,7 +30,7 @@ public class UpdateTestUseCaseImpl implements UpdateTestUseCase {
                 .coachNotes(request.getCoachNotes())
                 .exercises(request.getExercises().stream()
                         .map(this::toExerciseDomain)
-                        .collect(Collectors.toList()))
+                        .toList())
                 .createdAt(existing.getCreatedAt()) // invariata
                 .build();
 
@@ -62,7 +61,7 @@ public class UpdateTestUseCaseImpl implements UpdateTestUseCase {
                                 .unit(e.getUnit())
                                 .greaterIsBetter(e.getGreaterIsBetter())
                                 .build())
-                        .collect(Collectors.toList()))
+                        .toList())
                 .createdAt(domain.getCreatedAt())
                 .build();
     }
